# -------------------------------------------------------------------
# Copyright (c) 2013-2022, AIT Austrian Institute of Technology GmbH.
# All rights reserved. See file FMIPP_LICENSE for details.
# -------------------------------------------------------------------

cmake_minimum_required( VERSION 2.8.12 )

project( fmu_sdk_examples )

add_subdirectory( bouncingBall_fmu )
add_subdirectory( dq_fmu )
add_subdirectory( vanDerPol_fmu )
add_subdirectory( values_fmu )
add_subdirectory( inc_fmu )